# image-base64-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  random.txt
output/: nyan.exr  nyan.hdr  nyan.pgm  nyan.tiff
res/: bmp_data  exr_data  flif_data  gif_data  hdr_data  ico_data  jpg_data  nyan.flif  nyan.pbm  nyan.ppm  nyan.ras  nyan.xbm  pbm_data  pgm_data  png_data  ppm_data  ras_data  tiff_data  webp_data  xbm_data
src/: image_base64.rs  lib.rs  main.rs
tests/: test.rs
