[package]
name = "image-base64"
version = "0.1.0"
license = "MIT"
description = "Imaging library written in Rust. Provides basic filters and decoders for the most common image formats."
authors = ["katsumeshi <katsumeshi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/katsumeshi/image-base64-rs.git"
edition="2018"

[dependencies]
image = "0.21.1"
base64 = "0.10.1"
regex = "1.1.6"
rustc-serialize = "0.3.24"
rust-crypto =  "0.2.36"