[package]
name = "image-base64"
version = "0.1.0"
license = "MIT"
description = "Imaging library written in Rust. Provides basic filters and decoders for the most common image formats."
authors = ["katsumeshi <katsumeshi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/katsumeshi/image-base64-rs.git"
edition="2018"

[dependencies]
base64 = "0.10.1"
rust-crypto =  "0.2.36"
imghdr = "0.7.0"